# personal-bot

./: pyproject.toml
bot/: __main__.py
bot/lib/: fiscal.py  register.py  utils.py
bot/macros/: __main__.py
bot/templates/: index.html
test/: sample.json
