[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["LucasJSilva <LucasJSilva_0xF0@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyAutoGUI = "^0.9.54"
flask = "^3.0.3"
pynput = "^1.7.7"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
